--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h1>Pizza!</h1>
     <p>My Favorite Topics: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Cheese</li>
-      <li>Basil</li>
+      <li>Salad</li>
+      <li>Pineapple</li>
+      <li>Mushroom</li>
     </ul>
   </div>
 </div>
